--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-	"name": "fcc-exercise-tracker",
-	"version": "0.1.0",
-	"description": "A REST API project, part of Free Code Camp's curriculum",
-	"main": "index.js",
-	"scripts": {
-		"start": "node index.js"
-	},
-	"dependencies": {
-		"dotenv": "^8.2.0",
-		"express": "^4.16.4",
-		"cors": "^2.8.5"
-	},
-	"repository": {
-		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
-	},
-	"license": "MIT",
-	"keywords": [
-		"node",
-		"express"
-	]
+  "name": "fcc-exercise-tracker",
+  "version": "0.1.0",
+  "description": "A REST API project, part of Free Code Camp's curriculum",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.16.4",
+    "mongoose": "^6.3.6"
+  },
+  "repository": {
+    "url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
+  },
+  "license": "MIT",
+  "keywords": [
+    "node",
+    "express",
+    "microservice",
+    "exercise_tracker",
+    "free_code_camp"
+  ],
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
